--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>BeastyQT - Subathon - Nov 2023</title>
 
-    <script src="./mainscript.js" defer></script>
+    <!-- <script src="./mainscript.js" defer></script> -->
     <link rel="stylesheet" href="./styles.css">
     <link type="image/png" sizes="16x16" rel="icon" href="./icons8-ninja-ios-16-16.png">
     <link type="image/png" sizes="32x32" rel="icon" href="./icons8-ninja-ios-16-32.png">
