nav and footer edits and styling

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html"><img src="./icons8-ninja-ios-16-32.png" alt="ninja icon by Icons8"></a>
+            <a id="headLogo" href="./index.html"><img src="./icons8-ninja-ios-16-32.png" alt="ninja icon by Icons8"></a>
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="#">Instructions</a></li>
+                <li><a href="./pages/subgoals.html">SubGOALS</a></li>
                 <li><a href="#">About</a></li>
             </ul>
-            <button><a href="#">CTA</a></button>
+            <button><a href="#">Watch Live</a></button>
         </nav>
     </header>
     
@@ -33,10 +33,10 @@
     
     <footer>
         <div class="attribution">
-            <span>Copyright © 2023 | Project: Name | Coded by </span>
-            <a href="https://github.com/Unjustifiable1/" target="_blank">Unjustifiable1</a> 
+            <span>Copyright © 2023 | BeastyQT Subathon - Nov 2023 | Coded by </span>
+            <a href="https://github.com/Unjustifiable1/beastyqt_subathon_2023" target="_blank">Unjustifiable1</a> 
             <img src="./icons8-ninja-ios-16-32.png" alt="ninja icon by Icons8">
-            <span> | Project by _ _ _</span>
+            <span></span>
         </div>
     </footer>
 
