landing page grid setup. grid content styling started

--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
     </header>
     
     <main>
-        <h1>Hello World!</h1>
+        <div id="contentWrapper">
+            <div class="gridContent civImages1"><img src="./images/aoe4world.com_civs1.png" alt="AoE4 World new civs"></div>
+            <div class="gridContent civImages2"><img src="./images/aoe4world.com_civs2.png" alt="AoE4 World new civs"></div>
+            <div class="gridContent beastyBanner"><img src="./images/beastyqt_banner.jpg" alt="BeastyQT Youtube Banner"></div>
+            <div class="gridContent beastyContent1">Content1</div>
+            <div class="gridContent beastyContent2">Content2</div>
+        </div>
     </main>
     
     <footer>
