setting up subgoals page

--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
             <div class="gridContent civImages2"><img src="./images/aoe4world.com_civs2.png" alt="AoE4 World new civs"></div>
             <div class="gridContent beastyBanner"><img src="./images/beastyqt_banner.jpg" alt="BeastyQT Youtube Banner"></div>
             <div class="gridContent beastyContent1">
-                Content1
+                <div class="content1wrap">
+                    <img src="./images/beastyqt_logo_100x100.jpg" alt="BeastyQT logo">
+                    The Subathon is live on Twitch RIGHT NOW!!
+                </div>
+                <button>Watch Live</button>
             </div>
             <div class="gridContent beastyContent2">
-                Content2
+                <div>Content2</div>
+                <img src="./images/beastyqt_logo-150x150.png" alt="BeastyQT logo">
             </div>
         </div>
     </main>
