--- a/pages/subgoals.html
+++ b/pages/subgoals.html
@@ -7,19 +7,19 @@
 
     <title>Webpage Title</title>
 
-    <script src="./mainscript.js" defer></script>
-    <link rel="stylesheet" href="./styles.css">
-    <link type="image/png" sizes="16x16" rel="icon" href="./icons8-ninja-ios-16-16.png">
-    <link type="image/png" sizes="32x32" rel="icon" href="./icons8-ninja-ios-16-32.png">
-    <link type="image/png" sizes="96x96" rel="icon" href="./icons8-ninja-ios-16-96.png">
+    <!-- <script src="../mainscript.js" defer></script> -->
+    <link rel="stylesheet" href="../styles.css">
+    <link type="image/png" sizes="16x16" rel="icon" href="../icons8-ninja-ios-16-16.png">
+    <link type="image/png" sizes="32x32" rel="icon" href="../icons8-ninja-ios-16-32.png">
+    <link type="image/png" sizes="96x96" rel="icon" href="../icons8-ninja-ios-16-96.png">
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="./index.html"><img src="./icons8-ninja-ios-16-32.png" alt="ninja icon by Icons8"></a>
+            <a id="headLogo" href="../index.html"><img src="../icons8-ninja-ios-16-32.png" alt="ninja icon by Icons8"></a>
             <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="#">Instructions</a></li>
                 <li><a href="#">About</a></li>
             </ul>
@@ -28,15 +28,21 @@
     </header>
     
     <main>
-        <h1>Hello World!</h1>
+        <div class="gridContent beastyBanner"><img src="../images/beastyqt_banner.jpg" alt="BeastyQT Youtube Banner"></div>
+        <section id="goalsPg1" class="subGoalsSection">
+            Sub goals page 1
+        </section>
+        <section id="goalsPg2" class="subGoalsSection">
+            Sub goals page 2
+        </section>
     </main>
     
     <footer>
         <div class="attribution">
-            <span>Copyright © 2023 | Project: Name | Coded by </span>
+            <span>Copyright © 2023 | BeastyQT Subathon - Nov 2023 | Coded by </span>
             <a href="https://github.com/Unjustifiable1/" target="_blank">Unjustifiable1</a> 
-            <img src="./icons8-ninja-ios-16-32.png" alt="ninja icon by Icons8">
-            <span> | Project by _ _ _</span>
+            <img src="../icons8-ninja-ios-16-32.png" alt="ninja icon by Icons8">
+            <span></span>
         </div>
     </footer>
 
