--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="./pages/subgoals.html">SubGOALS</a></li>
                 <li><a href="#">About</a></li>
             </ul>
-            <button><a href="#">Watch Live</a></button>
+            <button><a href="https://www.twitch.tv/beastyqt">Watch Live</a></button>
         </nav>
     </header>
     
@@ -37,7 +37,7 @@
                     <img src="./images/beastyqt_logo_100x100.jpg" alt="BeastyQT logo">
                     The Subathon is live on Twitch RIGHT NOW!!
                 </div>
-                <button>Watch Live</button>
+                <button><a href="https://www.twitch.tv/beastyqt">Watch Live</a></button>
             </div>
             <div class="gridContent beastyContent2">
                 <div>Content2</div>
