--- a/pages/subgoals.html
+++ b/pages/subgoals.html
@@ -20,10 +20,10 @@
             <a id="headLogo" href="../index.html"><img src="../icons8-ninja-ios-16-32.png" alt="ninja icon by Icons8"></a>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="#">Instructions</a></li>
+                <li><a href="./subgoals.html">SubGoals</a></li>
                 <li><a href="#">About</a></li>
             </ul>
-            <button><a href="#">CTA</a></button>
+            <button><a href="https://www.twitch.tv/beastyqt">Watch Live</a></button>
         </nav>
     </header>
     
@@ -32,7 +32,107 @@
         <div class="gridGoalsContainer">
             <section id="goalsPg1" class="subGoalsSection">
                 <div class="goalsList goals1">
-                    Sub goals page 1
+                    <h1>Sub Goals</h1>
+                    <ul>
+                        <li class="goalItem">
+                            <label class="checkContainer">50 subs = 80 Bunti song
+                                <input type="checkbox" name="subChecklist" checked="checked">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">100 subs = DLC Giveaway #1
+                                <input type="checkbox" name="subChecklist" checked="checked">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">150 subs = Shave half beard
+                                <input type="checkbox" name="subChecklist" checked="checked">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">200 subs = Spin the Wheel Rewards
+                                <input type="checkbox" name="subChecklist" checked="checked">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">250 subs = How to play new ladder maps guide/best civs
+                                <input type="checkbox" name="subChecklist" checked="checked">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">300 subs = DLC Giveaway #2
+                                <input type="checkbox" name="subChecklist" checked="checked">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">350 subs = Analyze in depth one of my games
+                                <input type="checkbox" name="subChecklist">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">400 subs = Spin the Wheel Rewards
+                                <input type="checkbox" name="subChecklist" checked="checked">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">450 subs = FFA with Whamen & Outrageous AI
+                                <input type="checkbox" name="subChecklist">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">500 subs = How to play new ladder maps guide/best civs
+                                <input type="checkbox" name="subChecklist">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">250 subs = How to play new ladder maps guide/best civs
+                                <input type="checkbox" name="subChecklist">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">300 subs = DLC Giveaway #2
+                                <input type="checkbox" name="subChecklist">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">350 subs = Analyze in depth one of my games
+                                <input type="checkbox" name="subChecklist">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">250 subs = How to play new ladder maps guide/best civs
+                                <input type="checkbox" name="subChecklist">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">250 subs = How to play new ladder maps guide/best civs
+                                <input type="checkbox" name="subChecklist">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">250 subs = How to play new ladder maps guide/best civs
+                                <input type="checkbox" name="subChecklist">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                    </ul>
+                </div>
+                <div class="goalsList goals2">
                     <ul>
                         <li class="goalItem">
                             <label class="checkContainer">50 subs = 80 Bunti song
@@ -94,65 +194,11 @@
                                 <span class="checkmark"></span>
                             </label>
                         </li>
-                        <li class="goalItem">
-                            <label class="checkContainer">250 subs = How to play new ladder maps guide/best civs
-                                <input type="checkbox" name="subChecklist">
-                                <span class="checkmark"></span>
-                            </label>
-                        </li>
-                        <li class="goalItem">
-                            <label class="checkContainer">300 subs = DLC Giveaway #2
-                                <input type="checkbox" name="subChecklist">
-                                <span class="checkmark"></span>
-                            </label>
-                        </li>
-                        <li class="goalItem">
-                            <label class="checkContainer">350 subs = Analyze in depth one of my games
-                                <input type="checkbox" name="subChecklist">
-                                <span class="checkmark"></span>
-                            </label>
-                        </li>
-                        <li class="goalItem">
-                            <label class="checkContainer">250 subs = How to play new ladder maps guide/best civs
-                                <input type="checkbox" name="subChecklist">
-                                <span class="checkmark"></span>
-                            </label>
-                        </li>
-                        <li class="goalItem">
-                            <label class="checkContainer">250 subs = How to play new ladder maps guide/best civs
-                                <input type="checkbox" name="subChecklist">
-                                <span class="checkmark"></span>
-                            </label>
-                        </li>
-                        <li class="goalItem">
-                            <label class="checkContainer">250 subs = How to play new ladder maps guide/best civs
-                                <input type="checkbox" name="subChecklist">
-                                <span class="checkmark"></span>
-                            </label>
-                        </li>
                     </ul>
                 </div>
-                <div class="goalsList goals2">
-                    Sub goals page 1
+                <div class="goalsList goals3">
+                    <h1>Stretch Goals</h1>
                     <ul>
-                        <li class="goalItem">
-                            <label class="checkContainer">50 subs = 80 Bunti song
-                                <input type="checkbox" name="subChecklist" checked="checked">
-                                <span class="checkmark"></span>
-                            </label>
-                        </li>
-                        <li class="goalItem">
-                            <label class="checkContainer">100 subs = DLC Giveaway #1
-                                <input type="checkbox" name="subChecklist">
-                                <span class="checkmark"></span>
-                            </label>
-                        </li>
-                        <li class="goalItem">
-                            <label class="checkContainer">150 subs = Shave half beard
-                                <input type="checkbox" name="subChecklist">
-                                <span class="checkmark"></span>
-                            </label>
-                        </li>
                         <li class="goalItem">
                             <label class="checkContainer">200 subs = Spin the Wheel Rewards
                                 <input type="checkbox" name="subChecklist">
@@ -206,7 +252,7 @@
             </section>
             <section id="goalsPg2" class="subGoalsSection">
                 <div class="goalsList goals1">
-                    Sub goals page 2
+                    <h1>Sub Goals</h1>
                     <ul>
                         <li class="goalItem">
                             <label class="checkContainer">50 subs = 80 Bunti song
@@ -271,7 +317,6 @@
                     </ul>
                 </div>
                 <div class="goalsList goals2">
-                    Sub goals page 2
                     <ul>
                         <li class="goalItem">
                             <label class="checkContainer">50 subs = 80 Bunti song
@@ -291,6 +336,53 @@
                                 <span class="checkmark"></span>
                             </label>
                         </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">200 subs = Spin the Wheel Rewards
+                                <input type="checkbox" name="subChecklist">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">250 subs = How to play new ladder maps guide/best civs
+                                <input type="checkbox" name="subChecklist">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">300 subs = DLC Giveaway #2
+                                <input type="checkbox" name="subChecklist">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">350 subs = Analyze in depth one of my games
+                                <input type="checkbox" name="subChecklist">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">250 subs = How to play new ladder maps guide/best civs
+                                <input type="checkbox" name="subChecklist">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">250 subs = How to play new ladder maps guide/best civs
+                                <input type="checkbox" name="subChecklist">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                        <li class="goalItem">
+                            <label class="checkContainer">250 subs = How to play new ladder maps guide/best civs
+                                <input type="checkbox" name="subChecklist">
+                                <span class="checkmark"></span>
+                            </label>
+                        </li>
+                    </ul>
+                </div>
+                <div class="goalsList goals3">
+                    <h1>Stretch Goals</h1>
+                    <ul>
                         <li class="goalItem">
                             <label class="checkContainer">200 subs = Spin the Wheel Rewards
                                 <input type="checkbox" name="subChecklist">
